<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <EditText
            android:id="@+id/signupEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:backgroundTint="@color/material_on_primary_disabled"
            android:textColorHint="@color/material_on_primary_emphasis_medium"
            android:textColor="@color/material_on_primary_emphasis_high_type" />

        <EditText
            android:id="@+id/signupPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:backgroundTint="@color/material_on_primary_disabled"
            android:textColorHint="@color/material_on_primary_emphasis_medium"
            android:textColor="@color/material_on_primary_emphasis_high_type" />

        <EditText
            android:id="@+id/signupPasswordRepeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:ems="10"
            android:hint="@string/prompt_password_repeat"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:backgroundTint="@color/material_on_primary_disabled"
            android:textColorHint="@color/material_on_primary_emphasis_medium"
            android:textColor="@color/material_on_primary_emphasis_high_type" />

        <TextView
            android:id="@+id/signupErrorMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:textColor="?attr/colorOnPrimary"
            android:visibility="invisible"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="60dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonSignupCancel"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textColor="@color/bramble"/>

            <Button
                android:id="@+id/buttonSignUpSubmit"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_weight="1"
                android:text="@string/signup"
                android:textColor="@color/bramble"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>