<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="?attr/background">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="234dp"
    android:layout_gravity="center_vertical"
    android:orientation="vertical">

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:backgroundTint="@color/material_on_primary_disabled"
        android:textColorHint="@color/material_on_primary_emphasis_medium"
        android:textColor="@color/material_on_primary_emphasis_high_type" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:backgroundTint="@color/material_on_primary_disabled"
        android:textColorHint="@color/material_on_primary_emphasis_medium"
        android:textColor="@color/material_on_primary_emphasis_high_type" />

    <TextView
        android:id="@+id/loginErrorMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:text="Password forgotten"
        android:textColor="?attr/colorOnPrimary"
        android:visibility="invisible"/>


    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:text="Password forgotten"
        android:textColor="?attr/colorPrimaryVariant"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_weight="1"
            android:text="@string/signup"
            android:textColor="?attr/colorPrimaryVariant" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_weight="1"
            android:text="@string/login"
            android:textColor="?attr/colorPrimaryVariant" />
    </LinearLayout>

</LinearLayout>

</FrameLayout>