<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonNewProject"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="10"
            android:text="@string/create_new_project"
            android:textColor="@color/bramble"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonBrowse"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="10"
            android:text="@string/browse_projects"
            android:textColor="@color/bramble"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonSettings"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="10"
            android:text="@string/tutorial"
            android:textColor="@color/bramble"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>


</RelativeLayout>